# msc-dissertation

./: .gitignore  justfile  pyproject.toml  requirements.txt
src/tactile/data/: braille_classification.py  tactile_servo_control.py  tactile_sim2real.py
src/tactile/data/collect_data/: collect_data.py  process_image_data.py  process_marker_data.py
src/tactile/data_shear/: tactile_servo_control.py  utils.py
src/tactile/image_processing/: image_processing_utils.py  image_transforms.py  kernel_density.py  marker_extraction_methods.py  simple_sensors.py  voronoi.py
src/tactile/image_processing/collect_data/: collect_data.py
src/tactile/image_processing/process_data/: process_image_data.py  process_marker_data.py
src/tactile/learning/pix2pix/: image_generator.py  train_pix2pix.py
src/tactile/learning/supervised/: frame_generator.py  image_generator.py  marker_generator.py  models.py  simple_train_model.py  train_model.py  train_model_w_metrics.py
src/tactile/learning/utils/: utils_learning.py  utils_plots.py
src/tactile/servo_control/: launch_servo_control.py  replay_servo_control.py  setup_servo_control.py
src/tactile/servo_control/collect_data/: launch_collect_data.py  setup_collect_data.py
src/tactile/servo_control/learning/: demo_image_generation.py  launch_hyper_training.py  launch_training.py  setup_training.py
src/tactile/servo_control/prediction/: evaluate_model.py  test_model.py
src/tactile/servo_control/utils/: label_encoder.py  labelled_model.py  setup_embodiment.py
src/tactile/sim/embodiments/: __init__.py  embodiments.py
(+11 files in other folders)
